--- a/.github/workflows/create_conda_envs.yml
+++ b/.github/workflows/create_conda_envs.yml
@@ -62,8 +62,8 @@ jobs:
 
   metplus_base:
     if: |
-      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
-      contains(fromJSON(needs.check.outputs.run_list), 'metplus_base')) }}
+      always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'metplus_base'))
     runs-on: ubuntu-latest
     needs: [check,conda]
     env:
@@ -85,7 +85,9 @@ jobs:
         run: ghatest/.github/jobs/push_conda_image.sh
 
   py_embed_base:
-    if: always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'py_embed_base'))
+    if: |
+      always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'py_embed_base'))
     runs-on: ubuntu-latest
     needs: [check,metplus_base]
     env:
@@ -108,8 +110,8 @@ jobs:
 
   h5py:
     if: |
-      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
-      contains(fromJSON(needs.check.outputs.run_list), 'h5py')) }}
+      always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'h5py'))
     runs-on: ubuntu-latest
     needs: [check,py_embed_base]
     env:
@@ -132,8 +134,8 @@ jobs:
 
   metdataio:
     if: |
-      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
-      contains(fromJSON(needs.check.outputs.run_list), 'metdataio')) }}
+      always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'metdataio'))
     runs-on: ubuntu-latest
     needs: [check,metplus_base]
     env:
@@ -155,8 +157,8 @@ jobs:
 
   pygrib:
     if: |
-      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
-      contains(fromJSON(needs.check.outputs.run_list), 'pygrib')) }}
+      always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'pygrib'))
     runs-on: ubuntu-latest
     needs: [check,py_embed_base]
     env:
@@ -179,8 +181,8 @@ jobs:
 
   cfgrib:
     if: |
-      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
-      contains(fromJSON(needs.check.outputs.run_list), 'cfgrib')) }}
+      always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'cfgrib'))
     runs-on: ubuntu-latest
     needs: [check,metplus_base]
     env:
@@ -202,8 +204,8 @@ jobs:
 
   netcdf4:
     if: |
-      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
-      contains(fromJSON(needs.check.outputs.run_list), 'netcdf4')) }}
+      always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'netcdf4'))
     runs-on: ubuntu-latest
     needs: [check,metplus_base]
     env:
@@ -225,8 +227,8 @@ jobs:
 
   xesmf:
     if: |
-      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
-      contains(fromJSON(needs.check.outputs.run_list), 'xesmf')) }}
+      always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'xesmf'))
     runs-on: ubuntu-latest
     needs: [check,metplus_base]
     env:
@@ -248,8 +250,8 @@ jobs:
 
   spacetime:
     if: |
-      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
-      contains(fromJSON(needs.check.outputs.run_list), 'spacetime')) }}
+      always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'spacetime'))
     runs-on: ubuntu-latest
     needs: [check,metplus_base]
     env:
@@ -271,8 +273,8 @@ jobs:
 
   metplotpy:
     if: |
-      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
-      contains(fromJSON(needs.check.outputs.run_list), 'metplotpy')) }}
+      always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'metplotpy'))
     runs-on: ubuntu-latest
     needs: [check,metplus_base]
     env:
@@ -295,8 +297,8 @@ jobs:
 
   weatherregime:
     if: |
-      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
-      contains(fromJSON(needs.check.outputs.run_list), 'weatherregime')) }}
+      always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'weatherregime'))
     runs-on: ubuntu-latest
     needs: [check,metplotpy]
     env:
@@ -320,8 +322,8 @@ jobs:
 
   cycloneplotter:
     if: |
-      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
-      contains(fromJSON(needs.check.outputs.run_list), 'cycloneplotter')) }}
+      always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'cycloneplotter'))
     runs-on: ubuntu-latest
     needs: [check,metplus_base]
     env:
@@ -344,8 +346,8 @@ jobs:
 
   icecover:
     if: |
-      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
-      contains(fromJSON(needs.check.outputs.run_list), 'icecover')) }}
+      always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'icecover'))
     runs-on: ubuntu-latest
     needs: [check,py_embed_base]
     env:
@@ -368,8 +370,8 @@ jobs:
 
   gempak:
     if: |
-      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
-      contains(fromJSON(needs.check.outputs.run_list), 'gempak')) }}
+      always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'gempak'))
     runs-on: ubuntu-latest
     needs: [check,metplus_base]
     env:
@@ -392,8 +394,8 @@ jobs:
 
   gfdl-tracker:
     if: |
-      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
-      contains(fromJSON(needs.check.outputs.run_list), 'gfdl-tracker')) }}
+      always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'gfdl-tracker'))
     runs-on: ubuntu-latest
     needs: [check,metplus_base]
     env:
@@ -416,8 +418,8 @@ jobs:
 
   geovista:
     if: |
-      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
-      contains(fromJSON(needs.check.outputs.run_list), 'geovista')) }}
+      always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'geovista'))
     runs-on: ubuntu-latest
     needs: [check,metplus_base]
     env:
@@ -439,8 +441,8 @@ jobs:
 
   pandac:
     if: |
-      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
-      contains(fromJSON(needs.check.outputs.run_list), 'pandac')) }}
+      always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'pandac'))
     runs-on: ubuntu-latest
     needs: [check,metplotpy]
     env:
@@ -463,8 +465,8 @@ jobs:
 
   diff:
     if: |
-      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
-      contains(fromJSON(needs.check.outputs.run_list), 'diff')) }}
+      always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'diff'))
     runs-on: ubuntu-latest
     needs: [check,netcdf4]
     env:
