--- a/.github/workflows/subset_list.yml
+++ b/.github/workflows/subset_list.yml
@@ -29,55 +29,55 @@ jobs:
   one:
     runs-on: ubuntu-latest
     needs: [check]
-    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'one')) }}
+    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), ${{ github.job }})) }}
     steps:
       - name: Run
-        run: echo ran this one!
+        run: echo ran ${{ github.job }}!
 
   two:
     runs-on: ubuntu-latest
     needs: [check,one]
-    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'two')) }}
+    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), ${{ github.job }})) }}
     steps:
       - name: Run
-        run: echo ran this one!
+        run: echo ran ${{ github.job }}!
 
   three:
     runs-on: ubuntu-latest
     needs: [check,one]
-    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'three')) }}
+    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), ${{ github.job }})) }}
     steps:
       - name: Run
-        run: echo ran this one!
+        run: echo ran ${{ github.job }}!
 
   four:
     runs-on: ubuntu-latest
     needs: [check]
-    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'four')) }}
+    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), ${{ github.job }})) }}
     steps:
       - name: Run
-        run: echo ran this one!
+        run: echo ran ${{ github.job }}!
 
   five:
     runs-on: ubuntu-latest
     needs: [check,three]
-    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'five')) }}
+    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), ${{ github.job }})) }}
     steps:
       - name: Run
-        run: echo ran this one!
+        run: echo ran ${{ github.job }}!
 
   two_again:
     runs-on: ubuntu-latest
     needs: [check,one]
-    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'two_again')) }}
+    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), ${{ github.job }})) }}
     steps:
       - name: Run
-        run: echo ran this one!
+        run: echo ran ${{ github.job }}!
 
   six:
     runs-on: ubuntu-latest
     needs: [check,two_again]
-    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'six')) }}
+    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), ${{ github.job }})) }}
     steps:
       - name: Run
-        run: echo ran this one!
+        run: echo ran ${{ github.job }}!
