--- a/.github/workflows/subset_list.yml
+++ b/.github/workflows/subset_list.yml
@@ -37,7 +37,8 @@ jobs:
   two:
     runs-on: ubuntu-latest
     needs: [check,one]
-    if: always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), github.job))
+    if: |
+      always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), github.job))
     steps:
       - name: Run
         run: echo ran ${{ github.job }}!
@@ -69,7 +70,8 @@ jobs:
   two_again:
     runs-on: ubuntu-latest
     needs: [check,one]
-    if: always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), github.job))
+    if: |
+      always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), github.job))
     steps:
       - name: Run
         run: echo ran ${{ github.job }}!
@@ -77,7 +79,7 @@ jobs:
   six:
     runs-on: ubuntu-latest
     needs: [check,two_again]
-    if: always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), github.job))
+    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), github.job)) }}
     steps:
       - name: Run
         run: echo ran ${{ github.job }}!
