--- a/.github/workflows/subset_list.yml
+++ b/.github/workflows/subset_list.yml
@@ -31,7 +31,7 @@ jobs:
   one:
     runs-on: ubuntu-latest
     needs: [check]
-    if: always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), github.job))
+    if: always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'one'))
     steps:
       - name: Run
         run: echo ran ${{ github.job }}!
@@ -41,7 +41,7 @@ jobs:
     needs: [check,one]
     if: |
       always() && (needs.check.outputs.no_skip == 'true' ||
-      contains(fromJSON(needs.check.outputs.run_list), github.job))
+      contains(fromJSON(needs.check.outputs.run_list), 'two'))
     steps:
       - name: Run
         run: echo ran ${{ github.job }}!
