--- a/.github/workflows/subset_list.yml
+++ b/.github/workflows/subset_list.yml
@@ -35,8 +35,6 @@ jobs:
     steps:
       - name: Run
         run: echo ran ${{ github.job }}!
-      - run: echo ${{ contains(fromJSON(needs.check.outputs.run_list), 'one') }}
-      - run: echo ${{ contains(fromJSON(needs.check.outputs.run_list), github.job) }}
 
   two:
     runs-on: ubuntu-latest
@@ -51,7 +49,7 @@ jobs:
   three:
     runs-on: ubuntu-latest
     needs: [check,one]
-    if: always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), github.job))
+    if: always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'three'))
     steps:
       - name: Run
         run: echo ran ${{ github.job }}!
@@ -59,7 +57,7 @@ jobs:
   four:
     runs-on: ubuntu-latest
     needs: [check]
-    if: always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), github.job))
+    if: always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'four'))
     steps:
       - name: Run
         run: echo ran ${{ github.job }}!
@@ -67,7 +65,7 @@ jobs:
   five:
     runs-on: ubuntu-latest
     needs: [check,three]
-    if: always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), github.job))
+    if: always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'five'))
     steps:
       - name: Run
         run: echo ran ${{ github.job }}!
@@ -76,7 +74,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [check,one]
     if: |
-      always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), github.job))
+      always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'two_again'))
     steps:
       - name: Run
         run: echo ran ${{ github.job }}!
@@ -84,7 +82,7 @@ jobs:
   six:
     runs-on: ubuntu-latest
     needs: [check,two_again]
-    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), github.job)) }}
+    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'six')) }}
     steps:
       - name: Run
         run: echo ran ${{ github.job }}!
